--- a/leetCode.html
+++ b/leetCode.html
@@ -214,20 +214,36 @@ var isSelfDividingNumbers = function(num) {
 };
 
 /**
- * @param {number} left
- * @param {number} right
- * @return {number[]}
+ * @param {number[][]} image
+ * @param {number} sr
+ * @param {number} sc
+ * @param {number} newColor
+ * @return {number[][]}
  */
-var selfDividingNumbers = function(left, right) {
-    let result = [];
-    for(let i = left; i<=right; i++) {
-        if(isSelfDividingNumbers(i)) {
-            result.push(i);
-        }
+var floodFill = function(image, sr, sc, newColor, oldColor, cache={}) {
+    if(sr<0 || sr>=image.length) {//行超出
+        return image;
+    }
+    if(sc<0 || sc>=image[0].length) {//列超出
+        return image;
+    }
+    if(cache[`${sr}_${sc}`]) {
+        return image;
+    }
+    if(oldColor===void 0 || image[sr][sc]==oldColor) {
+        oldColor = image[sr][sc];
+        image[sr][sc] = newColor;
+        cache[`${sr}_${sc}`] = true;//已经处理标记
+        floodFill(image, sr-1, sc, newColor, oldColor, cache);
+        floodFill(image, sr, sc-1, newColor, oldColor, cache);
+        floodFill(image, sr+1, sc, newColor, oldColor, cache);
+        floodFill(image, sr, sc+1, newColor, oldColor, cache);
     }
 
-    return result;
+    return image;
 };
-console.log(selfDividingNumbers(1, 22));//[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 15, 22]
+console.log(floodFill([[1,1,1],[1,1,0],[1,0,1]], 1, 1, 2));//[[2,2,2],[2,2,0],[2,0,1]]
+console.log(floodFill([], 1, 1, 2));
+console.log(floodFill([[0,0,0],[0,1,1]], 1, 1, 1));
 </script>
 </body>
