--- a/leetCode.html
+++ b/leetCode.html
@@ -217,23 +217,22 @@ var isSelfDividingNumbers = function(num) {
 };
 
 /**
- * @param {string} J
- * @param {string} S
+ * @param {TreeNode} root
  * @return {number}
  */
-var numJewelsInStones = function(J, S) {
-    const map = {};
-    for(let j of J) {
-        map[j] = 1;
-    }
-    let count = 0;
-    for(let s of S) {
-        map[s] && count++;
+var minDiffInBST = function(root) {
+    let arr = preorderTraversal(root);
+    let minDistance = Infinity;
+    for(let i = 0, len = arr.length; i<len-1; i++) {
+        let distance = arr[i+1]["val"]-arr[i]["val"];
+        if(minDistance>distance) {
+            minDistance = distance;
+        }
     }
 
-    return count;
+    return minDistance;
 };
-console.log(numJewelsInStones("aA", "aAAbbbb"));//3
-console.log(numJewelsInStones("z", "ZZ"));//0
+console.log(minDiffInBST(makeTree([4,2,6,1,3,null,null])));//1
+console.log(minDiffInBST(makeTree([90,69,null,49,89,null,52,null,null,null,null])));//1
 </script>
 </body>
