--- a/leetCode.html
+++ b/leetCode.html
@@ -216,30 +216,31 @@ var isSelfDividingNumbers = function(num) {
     return true;
 };
 
-/**
- * @param {string} A
- * @param {string} B
- * @return {boolean}
- */
-var rotateString = function(A, B) {
-    const shift = (str)=>{
-        if(str.length<1) {
-            return str;
-        }
+const CODE = [".-","-...","-.-.","-..",".","..-.","--.","....","..",".---","-.-",".-..","--","-.","---",".--.","--.-",".-.","...","-","..-","...-",".--","-..-","-.--","--.."];
 
-        return str.slice(1) + str[0];
-    };
-    for(let i = 0, len = A.length; i<=len; i++) {
-        if(A==B) {
-            return true;
-        }
-        A = shift(A);
+const transformToCode = function(str) {
+    let result = "";
+    for(let ch of str) {
+        result += CODE[ch.toLowerCase().charCodeAt(0)-97];
     }
 
-    return false;
+    return result;
 };
-console.log(rotateString("", ""));//true
-console.log(rotateString("abcde", "cdeab"));//true
-console.log(rotateString("abcde", "abced"));//false
+
+/**
+ * @param {string[]} words
+ * @return {number}
+ */
+var uniqueMorseRepresentations = function(words) {
+    const set = new Set();
+    let count = 0;
+    for(let word of words) {
+        let code = transformToCode(word);
+        set.add(code);
+    }
+
+    return set.size;
+};
+console.log(uniqueMorseRepresentations(["gin", "zen", "gig", "msg"]));//2
 </script>
 </body>
