--- a/leetCode.html
+++ b/leetCode.html
@@ -212,30 +212,36 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {number[][]} points
- * @return {number}
+ * @param {string} paragraph
+ * @param {string[]} banned
+ * @return {string}
  */
-var largestTriangleArea = function(points) {
-    const getArea = (a, b, c)=>{
-        const [x1, y1] = a;
-        const [x2, y2] = b;
-        const [x3, y3] = c;
-        return 0.5 * Math.abs(x2 * y3 + x1 * y2 + x3 * y1 - x3 * y2 - x2 * y1 - x1 * y3)
+var mostCommonWord = function(paragraph, banned) {
+    const bannedMap = {};
+    for(let b of banned) {
+        bannedMap[b] = true;
     }
 
-    let max = 0;
-    let len = points.length;
-    for(let x = 0; x<len-2; x++) {
-        for(let y = x+1; y<len-1; y++) {
-            for(let z = y+1; z<len; z++) {
-                max = Math.max(max, getArea(points[x], points[y], points[z]));
-            }
+    const cache = {};
+    let words = paragraph.split(/[^a-zA-Z]/g);
+    for(let word of words) {
+        word = word.toLowerCase();
+        if(word && !bannedMap[word]) {
+            cache[word] = (cache[word] || 0) + 1;
         }
     }
 
-    return max;
+    let max = 0;
+    let maxWord = "";
+    for(let word in cache) {
+        if(cache[word]>max) {
+            max = cache[word];
+            maxWord = word;
+        }
+    }
+
+    return maxWord;
 };
-console.log(largestTriangleArea([[0,0],[0,1],[1,0],[0,2],[2,0]]));//2
-console.log(largestTriangleArea([[1,0],[0,0],[0,1]]));//0.5
+console.log(mostCommonWord("Bob hit a ball, the hit BALL flew far after it was hit.", ["hit"]));//"ball"
 </script>
 </body>
