--- a/leetCode.html
+++ b/leetCode.html
@@ -212,36 +212,31 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {string} paragraph
- * @param {string[]} banned
- * @return {string}
+ * @param {string} S
+ * @param {character} C
+ * @return {number[]}
  */
-var mostCommonWord = function(paragraph, banned) {
-    const bannedMap = {};
-    for(let b of banned) {
-        bannedMap[b] = true;
-    }
-
-    const cache = {};
-    let words = paragraph.split(/[^a-zA-Z]/g);
-    for(let word of words) {
-        word = word.toLowerCase();
-        if(word && !bannedMap[word]) {
-            cache[word] = (cache[word] || 0) + 1;
+var shortestToChar = function(S, C) {
+    const result = [];
+    let prePos = -1;
+    let cursor = Infinity;
+    for(let i = 0, len = S.length; i<len; i++) {
+        if(S[i]==C) {
+            result.push(0);
+            for(let j = i-1, newCursor = 1; j>prePos; j--, newCursor++) {
+                if(newCursor<result[j]) {
+                    result[j] = newCursor;
+                }
+            }
+            cursor = 0;
+            prePos = i;
+        }else {
+            result.push(++cursor);
         }
     }
 
-    let max = 0;
-    let maxWord = "";
-    for(let word in cache) {
-        if(cache[word]>max) {
-            max = cache[word];
-            maxWord = word;
-        }
-    }
-
-    return maxWord;
+    return result;
 };
-console.log(mostCommonWord("Bob hit a ball, the hit BALL flew far after it was hit.", ["hit"]));//"ball"
+console.log(shortestToChar("loveleetcode", "e"));//[3, 2, 1, 0, 1, 0, 0, 1, 2, 2, 1, 0]
 </script>
 </body>
