--- a/leetCode.html
+++ b/leetCode.html
@@ -213,30 +213,23 @@ const getGroup = function(arr, count) {
 
 /**
  * @param {string} S
- * @param {character} C
- * @return {number[]}
+ * @return {string}
  */
-var shortestToChar = function(S, C) {
-    const result = [];
-    let prePos = -1;
-    let cursor = Infinity;
-    for(let i = 0, len = S.length; i<len; i++) {
-        if(S[i]==C) {
-            result.push(0);
-            for(let j = i-1, newCursor = 1; j>prePos; j--, newCursor++) {
-                if(newCursor<result[j]) {
-                    result[j] = newCursor;
-                }
-            }
-            cursor = 0;
-            prePos = i;
+var toGoatLatin = function(S) {
+    const vowels = {"a":true, "e":true, "i":true, "o":true, "u":true, "A":true, "E":true, "I":true, "O":true, "U":true};
+    return S.split(" ").map((v, i)=>{
+        let str = new Array(i+2).join("a");
+        if(vowels[v[0]]) {
+            str = v + "ma" + str;
         }else {
-            result.push(++cursor);
+            str = v.slice(1) + v[0] + "ma" + str;
         }
-    }
 
-    return result;
+        return str;
+    }).join(" ");
 };
-console.log(shortestToChar("loveleetcode", "e"));//[3, 2, 1, 0, 1, 0, 0, 1, 2, 2, 1, 0]
+console.log(toGoatLatin("I speak Goat Latin")=="Imaa peaksmaaa oatGmaaaa atinLmaaaaa");
+console.log(toGoatLatin("The quick brown fox jumped over the lazy dog")=="heTmaa uickqmaaa rownbmaaaa oxfmaaaaa umpedjmaaaaaa overmaaaaaaa hetmaaaaaaaa azylmaaaaaaaaa ogdmaaaaaaaaaa");
+console.log(toGoatLatin("Each word consists of lowercase and uppercase letters only")=="Eachmaa ordwmaaa onsistscmaaaa ofmaaaaa owercaselmaaaaaa andmaaaaaaa uppercasemaaaaaaaa etterslmaaaaaaaaa onlymaaaaaaaaaa");
 </script>
 </body>
