--- a/leetCode.html
+++ b/leetCode.html
@@ -212,13 +212,24 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {number[][]} A
- * @return {number[][]}
+ * @param {number[]} rec1
+ * @param {number[]} rec2
+ * @return {boolean}
  */
-var flipAndInvertImage = function(A) {
-    return A.map(row=>row.reverse().map(v=>v?0:1));
+var isRectangleOverlap = function(rec1, rec2) {
+    const [x1, y1, x2, y2] = rec1;
+    const [x3, y3, x4, y4] = rec2;
+    const x5 = Math.max(x1, x3);
+    const x6 = Math.min(x2, x4);
+    const y5 = Math.max(y1, y3);
+    const y6 = Math.min(y2, y4);
+
+    return x5<x6 && y5<y6;
 };
-console.log(flipAndInvertImage([[1,1,0],[1,0,1],[0,0,0]]));//[[1,0,0],[0,1,0],[1,1,1]]
-console.log(flipAndInvertImage([[1,1,0,0],[1,0,0,1],[0,1,1,1],[1,0,1,0]]));//[[1,1,0,0],[0,1,1,0],[0,0,0,1],[1,0,1,0]]
+console.log(isRectangleOverlap([0,0,2,2], [1,1,3,3]));//true
+console.log(isRectangleOverlap([0,0,1,1], [1,0,2,1]));//false
+console.log(isRectangleOverlap([0,0,1,1], [0, 0, 1, 1]));//true
+console.log(isRectangleOverlap([0,0,1,1], [0, 0, 0.5, 0.5]));//true
+console.log(isRectangleOverlap([0,0,1,1], [0.1, 0.1, 0.5, 0.5]));//true
 </script>
 </body>
